--- a/layout/_partial/post/nav.ejs
+++ b/layout/_partial/post/nav.ejs
@@ -1,18 +1,11 @@
 <% if (post.prev || post.next){ %>
-  <nav class="navigation post-navigation" role="navigation">
-    <div class="nav-links">
-      <% if (post.prev){ %>
-        <div class="nav-prev">
-          <a href="<%- url_for(post.prev.path) %>" rel="prev">
-            <% if (post.prev.title){ %><%= post.prev.title %><% } else { %>(no title)<% } %>
-          </a>
-        </div>
-      <% } %>
-      <% if (post.next){ %>
-        <div class="nav-next">
-          <a href="<%- url_for(post.next.path) %>" rel="prve"><%= post.next.title %></a>
-        </div>
-      <% } %>
-      </div>
-  </nav>
+  <div class="post-navigation" role="navigation">
+    <% if (post.prev){ %>
+      <a href="<%- url_for(post.prev.path) %>" rel="prev"><%= __('newer') %><%= post.prev.title %></a>
+    <% } %>
+    <% if (post.next){ %>
+      <a href="<%- url_for(post.next.path) %>" rel="next"><%= __('older') %><%= post.next.title %></a>
+    <% } %>
+    </div>
+  </div>
 <% } %>
