--- a/source/css/_partial/anchor.styl
+++ b/source/css/_partial/anchor.styl
@@ -9,7 +9,8 @@
     height: 50px
     padding: 19px 13px
     box-sizing: border-box
-    border: 1px solid #fcd088
+    border: 1px solid #f2f2f3
+    background: #fff
     cursor: pointer
     visibility: hidden
     z-index: 9
