--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -1,5 +1,3 @@
-
-
 @media only screen and (max-width: 1199px)
 	.woocommerce
 		width: 610px
@@ -153,8 +151,7 @@
 		padding: 30px
 
 	.comment-navigation,
-	.posts-navigation,
-	.post-navigation
+	.posts-navigation
 		padding: 30px
 
 @media only screen and (max-width: 768px)
@@ -207,27 +204,4 @@
 		width: 100%
 		margin-bottom: 30px
 
-@media only screen and (max-width: 500px)
-	.project
-		width: 100%
-
-	.project-title
-		font-size: 16px
-
-	.atblock .widget-title,
-	h3
-		font-size: 20px !important
-
-	.astrid-2col,
-	.astrid-3col
-		padding-left: 0
-		padding-right: 0
-
-	.woocommerce .content-area,
-	.hentry
-		padding: 15px
-
-	.woocommerce ul.products li.product,
-	.woocommerce-page ul.products li.product
-		width: 100%
 
