--- a/layout/_partial/archive-post.ejs
+++ b/layout/_partial/archive-post.ejs
@@ -1,6 +1,4 @@
-<article class="archive-entry archive-type-<%= post.layout %>">
-  <header class="archive-entry-header">
+<li class="archive-item">
 	<%- partial('post/date', {class_name: 'archive-entry-date', date_format: 'YYYY/MM/DD'}) %>
-    <%- partial('post/title', {class_name: 'archive-entry-title'}) %>
-  </header>
-</article>
+  <%- partial('post/title', {class_name: 'archive-entry-title'}) %>
+</li>
