--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,22 +1,20 @@
 <article id="<%= post.slug %>" class="article clearfix">
-  <header class="entry-header">
-  <% if (post.link || post.title){ %>
-    <%- partial('post/title', {class_name: 'entry-title'}) %>
-  <% } %>
-    <div class="entry-meta">
-      <%- partial('post/date', {class_name: 'entry-date', date_format: 'MMMM DD, YYYY'}) %>
+  <header class="post-header">
+    <%- partial('post/title') %>
+    <div class="post-meta">
+      <%- partial('post/date', {date_format: 'MMMM DD, YYYY'}) %>
       <%- partial('post/category') %>
     </div>
   </header>
   <% if (index){ %>
-    <div class="entry-thumb">
+    <div class="post-thumb">
       <% if (post.photos != ""){ %>
         <a href="<%- url_for(post.path) %>"><img width="500" height="300" src="<%= post.photos[0] %>" alt=""></a>
       <% } else { %>
         <a href="<%- url_for(post.path) %>"><img width="500" height="300" src="https://unsplash.it/500/300/?random" alt=""></a>
       <% } %>
     </div>
-    <div class="entry-summary">
+    <div class="post-summary">
       <% if (post.excerpt) { %>
         <%- post.excerpt %>
       <% } else { %>
@@ -27,11 +25,9 @@
       <a class="button post-button" href="<%- url_for(post.path) %>"><%= __('read_more') %></a>
     </P>
   <% } else { %>
-    <div id="entry-content" class="entry-content"><%- post.content %></div>
-    <footer class="entry-footer">
-      <div class="entry-meta" style="border-bottom: none;">
-        <%- partial('post/tag') %>
-      </div>
+    <div id="post-content" class="post-content"><%- post.content %></div>
+    <footer class="post-footer">
+      <%- partial('post/tag') %>
       <%- partial('post/copyright') %>
     </footer>
   <% } %>
