--- a/layout/_partial/post/tag.ejs
+++ b/layout/_partial/post/tag.ejs
@@ -1,8 +1,6 @@
 <% if (post.tags && post.tags.length){ %>
-  <span class="entry-tags">
-    <%- list_tags(post.tags, {
-      show_count: false,
-      class: 'entry-tag'
-    }) %>
-  </span>
+  <%- list_tags(post.tags, {
+    show_count: false,
+    class: 'post-tag'
+  }) %>
 <% } %>
