--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,11 +1,9 @@
 <% if (post.link){ %>
-  <h2 class="<%= class_name %>">
-    <a href="<%- url_for(post.link) %>" target="_blank" rel="bookmark" itemprop="url"><%= post.title %></a>
-  </h2>
+  <a class="post-title" href="<%- url_for(post.link) %>"><%= post.title %></a>
 <% } else if (post.title){ %>
   <% if (index){ %>
-    <h2 class="<%= class_name %>"><a href="<%- url_for(post.path) %>"><%= post.title %></a></h2>
+    <a class="post-title" href="<%- url_for(post.path) %>"><%= post.title %></a>
   <% } else { %>
-    <h2 class="<%= class_name %>" itemprop="name"><%= post.title %></h2>
+    <h1 class="post-title"><%= post.title %></h2>
   <% } %>
 <% } %>
