--- a/layout/category.ejs
+++ b/layout/category.ejs
@@ -1,4 +1,1 @@
-<header class="page-header">
-  <h1 class="page-title"><i class="fa fa-folder-o"></i><%- page.category %></h1>
-</header>
-<%- partial('_partial/archive', {pagination: config.category, index: true}) %>
+<%- partial('_partial/archive', {title: page.category, pagination: config.category, index: true}) %>
