--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -1,20 +1,18 @@
 .widget-area
-  @media md-min
-    column(side-column)
-
+	@media md-min
+		column(side-column)
+		margin-left: -1px
 
 .widget-area .widget
-	margin-bottom: -1px
+	margin: 0 0 -1px
 	padding: 30px
-	color: #656D6D
+	color: #656d6d
 	background: #fff
 	box-sizing: border-box
 	border-top: 1px solid #f2f2f3
 	border-bottom: 1px solid #f2f2f3
-.widget-area .widget a
-	color:#656D6D
-.widget ul
-	padding: 0 0 0 20px
+	@media md-min
+		border-left: 1px solid #f2f2f3
 .widget li
 	padding-top: 2px
 	padding-bottom: 2px
@@ -22,16 +20,21 @@
 	padding-left: 20px
 .widget-area .widget,
 .widget-area .widget a
-	color: #656D6D
+	color: #656d6d
+.widget-area .widget a:hover
+	color: #fcd088
 .widget-area .widget-title
 	text-transform: uppercase
 	margin: 0 0 20px
+
 /* Make sure select elements fit in widgets. */
 .widget select
 	max-width: 100%
+
 /* Search widget. */
 .widget_search .search-submit
 	display: none
+
 /* Recent posts */
 .widget_recent_posts ul
 	list-style: none
@@ -51,6 +54,7 @@
 	margin-top: 5px
 .widget_recent_posts .post-date .fa
 	margin-right: 6px
+
 /* Social widget */
 .social-menu-widget
 	padding: 0 !important
@@ -140,90 +144,14 @@
 
 /* Default widgets */
 .widget_recent_posts ul,
-.widget_archives ul,
-.widget_categories ul,
 .widget_recent_comments ul
 	list-style: none
 	padding: 0
 .widget_recent_posts li::before,
-.widget_archives li::before,
-.widget_categories li::before,
 .widget_recent_comments li::before
 	font-family: Fontawesome
 	font-size: 15px
-.widget_archives li::before
-	content: '\f133'
-	margin-right: 8px
-.widget_categories li::before
-	content: '\f114'
-	margin-right: 8px
+
 .widget_recent_comments li::before
 	content: '\f0e5'
 	margin-right: 8px
-.widget_tagcloud #tagcloud
-	position: relative
-	width: 280px
-	height: 240px
-	margin: 0 auto
-	text-align: center
-.widget_tagcloud #tagcloud a
-	position: absolute
-	top: 0px
-	left: 0px
-	text-decoration: none
-	margin: 0 10px 15px 0
-	line-height: 18px
-	text-align: center
-	padding: 1px 5px
-	display: inline-block
-	border-radius: 2px
-.category-list-count,
-.archive-list-count
-	padding-left: 5px
-.category-list-count::before,
-.archive-list-count::befor
-	content: "("
-.category-list-count::after,
-.archive-list-count::afte
-	content: ")"
-
-.page-header
-	border-bottom: 1px solid #F2F2F3
-	margin: 0
-	padding: 20px 60px
-.page-header .page-title
-	margin: 0
-	padding: 0
-.page-header .page-title .fa
-	margin-right: 15px
-	color: #fcd088
-
-.comment-navigation,
-.posts-navigation,
-.post-navigation
-	margin: 0
-	overflow: hidden
-	padding: 30px 60px
-
-.comment-navigation .nav-prev,
-.posts-navigation .nav-prev,
-.post-navigation .nav-prev
-	float: left
-	width: 50%
-.comment-navigation a,
-.posts-navigation a,
-.post-navigation a
-	color: #272727
-.comment-navigation a:hover,
-.posts-navigation a:hover,
-.post-navigation a:hover
-	color: #fcd088
-	text-decoration: none
-.comment-navigation .nav-next,
-.posts-navigation .nav-next,
-.post-navigation .nav-next
-	float: right
-	text-align: right
-	width: 50%
-
-
